GKE HTTP(S) Load Balance with Ingress/marvel.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: marvel
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      name: marvel
  template:
    metadata:
      labels:
        name: marvel
    spec:
      containers:
      - image: gcr.io/epam-20181105/marvel
        name: marvel-container
        ports:
        - containerPort: 80
          protocol: TCP
