GKE HTTP(S) Load Balance with Ingress/pay.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pay
  namespace: default
spec:
  selector:
    matchLabels:
      app: pay
  template:
    metadata:
      labels:
        app: pay
    spec:
      containers:
      - image: gcr.io/epam-20181105/pay
        imagePullPolicy: IfNotPresent
        name: pay
        ports:
        - containerPort: 8080
          protocol: TCP
