GKE HTTP(S) Load Balance with Ingress/marvel-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: marvel-service
  namespace: default
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    name: marvel
