GKE HTTP(S) Load Balance with Ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: marvel-ingress
spec:
  rules:
  - host: 
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: marvel-service
            port:
              number: 80
      - path: /pay
        pathType: ImplementationSpecific
        backend:
          service:
            name: pay-service
            port:
              number: 80
